fix jump url

--- a/src/style/SideNavBar.less
+++ b/src/style/SideNavBar.less
@@ -36,6 +36,9 @@
         .xcreategroup {
             background: url(../img/icon-creategroup.png) center center no-repeat;
         }
+        .jieguozhanshi {
+            background: url(../img/icon-jieguozhanshi.png) center center no-repeat;
+        }
     }
     .SideNavBarItem.active {
         background-color: #1abc9c;
